[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlp-sanitizer"
version = "1.0.0"
description = "DLP Incident CSV Sanitizer — load, transform, redact, persist."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Netanel" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that exercise the full input -> process -> output pipeline",
    "unit: isolated unit tests for individual components",
]
addopts = "-ra --strict-markers --tb=short"
